--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project_2",
+  "name": "CRM_2",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -7,22 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Glouton-2020/project_2.git"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Glouton-2020/project_2/issues"
-  },
-  "homepage": "https://github.com/Glouton-2020/project_2#readme",
   "dependencies": {
     "express": "^4.17.1",
     "express-react-views": "^0.11.0",
     "method-override": "^3.0.0",
-    "mongoose": "^5.9.11",
+    "mongoose": "^5.9.12",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
